--- a/blocks/publication/__picture/publication__picture.css
+++ b/blocks/publication/__picture/publication__picture.css
@@ -1,16 +1,41 @@
 .publication__picture{
-    width: 100%;
+    width: 256px;
+    height: 160px;
+    object-fit: cover;
+
+    border-radius: 5px;
+
+    display: block;
+    margin: 0 auto;
+    
+}
+@media screen and (min-width: 450px){
+    .publication__picture{
+        width: 100%;
+        height: auto;
+    }
 }
 
-@media screen and (min-width: 900px){
+@media screen and (min-width: 768px){
     .publication__picture{
         width: 291px;
         height: 158px;
+
+        border-radius: 10px;
     }
 }
 
-@media screen and (min-width: 1440px){
-    .publication{
-        width: 310px;
+@media screen and (min-width: 1100px){
+    .publication__picture{
+        width: 100%;
+        height: auto;
     }
 }
+
+@media screen and (min-width: 1400px){
+    .publication__picture{
+        width: 310px;
+        height: 223px;
+    }
+}
+
