--- a/blocks/publication/__authors/publication__authors.css
+++ b/blocks/publication/__authors/publication__authors.css
@@ -8,4 +8,18 @@
 
     margin: 0;
     margin-top: 4px;
+
+    overflow: hidden;
+    min-height: 34px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+
+}
+
+@media screen and (min-width: 620px){
+    .publication__authors{
+        font-size: 14px;
+        line-height: 19px;
+    }
 }
