--- a/blocks/publication/__links/publication__links.css
+++ b/blocks/publication/__links/publication__links.css
@@ -5,3 +5,9 @@
     background-color: #009FAC;
     border-radius: 0px 0px 5px 5px;
 }
+
+@media screen and (min-width: 620px){
+    .publication__links{
+        padding: 15px 20px;
+    }
+}
