--- a/blocks/publication/__social-sites/publication__social-sites.css
+++ b/blocks/publication/__social-sites/publication__social-sites.css
@@ -7,3 +7,9 @@
     background-color: #FFFFFF;
     border-radius: 8px;
 }
+
+@media screen and (min-width: 780px){
+    .publication__social-sites{
+        right: -6px;
+    }
+}
