--- a/blocks/publication/__text/publication__text.css
+++ b/blocks/publication/__text/publication__text.css
@@ -8,8 +8,19 @@
     margin-top: 10px;
 
     overflow: hidden;
+    min-height: 128px;
 
     display: -webkit-box;
     -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
+}
+
+@media screen and (min-width: 620px){
+    .publication__text{
+        font-size: 14px;
+        line-height: 19px;
+        
+        -webkit-line-clamp: 7;
+        min-height: 133px;
+    }
 }
