--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 @import url(../blocks/list/list.css);
 @import url(../blocks/link/link.css);
 @import url(../blocks/button/button.css);
+@import url(../blocks/logo/logo.css);
 
 @import url(../blocks/educate/educate.css);
 @import url(../blocks/educate/__body/educate__body.css);
@@ -53,3 +54,35 @@
 
 @import url(../blocks/swiper-pagination-bullet/swiper-pagination-bullet.css);
 @import url(../blocks/swiper-pagination-bullet-active/swiper-pagination-bullet-active.css);
+
+@import url(../blocks/communication/communication.css);
+@import url(../blocks/communication/__container/communication__container.css);
+@import url(../blocks/communication/__title/communication__title.css);
+@import url(../blocks/communication/__description/communication__description.css);
+@import url(../blocks/communication/__form/communication__form.css);
+@import url(../blocks/communication/__input/communication__input.css);
+@import url(../blocks/communication/__text-area/communication__text-area.css);
+@import url(../blocks/communication/__send-button/communication__send-button.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks//footer/__container/footer__container.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__link/_type/footer__link_type_social.css);
+@import url(../blocks/footer/__column/footer__column.css);
+@import url(../blocks/footer/__column/_content/footer__column_content_about-center.css);
+@import url(../blocks/footer/__column/_content/footer__column_content_education.css);
+@import url(../blocks/footer/__column/_content/footer__column_content_contacts.css);
+@import url(../blocks/footer/__column-heading/footer__column-heading.css);
+@import url(../blocks/footer/__column-links/footer__column-links.css);
+@import url(../blocks/footer/__column-links-item/footer__column-links-item.css);
+@import url(../blocks/footer/__logo/footer__logo.css);
+@import url(../blocks/footer/__info/footer__info.css);
+@import url(../blocks/footer/__center-description/footer__center-description.css);
+@import url(../blocks/footer/__city/footer__city.css);
+@import url(../blocks/footer/__address/footer__address.css);
+@import url(../blocks/footer/__phones/footer__phones.css);
+@import url(../blocks/footer/__email/footer__email.css);
+@import url(../blocks/footer/__social/footer__social.css);
+@import url(../blocks/footer/__social-item/footer__social-item.css);
+@import url(../blocks/footer/__social-icon/footer__social-icon.css);
+@import url(../blocks/footer/__author/footer__author.css);
