--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -2,4 +2,6 @@
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
     max-width: 1400px;
     margin: 0 auto;
+    font-style: normal;
+    font-weight: 400;
 }
