--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,32 @@
 @import url(../vendor/font/font.css);
 
 @import url(../blocks/body/body.css);
+
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__menu/header__menu.css);
+@import url(../blocks/header/__nav/header__nav.css);
+@import url(../blocks/header/__nav-item/header__nav-item.css);
+@import url(../blocks/header/__icon/header__icon.css);
+
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__title-min/intro__title-min.css);
+@import url(../blocks/intro/__subtitle/intro__subtitle.css);
+@import url(../blocks/intro/__button/intro__button.css);
+@import url(../blocks/intro/__about-us-title/intro__about-us-title.css);
+@import url(../blocks/intro/__about-us-text/intro__about-us-text.css);
+@import url(../blocks/intro/__about-us-cards/intro__about-us-cards.css);
+@import url(../blocks/intro/__about-us-card/intro__about-us-card.css);
+@import url(../blocks/intro/__about-us-knopka/intro__about-us-knopka.css);
+@import url(../blocks/intro/__about-us-card-data/intro__about-us-card-data.css);
+@import url(../blocks/intro/__about-us-card-title/intro__about-us-card-title.css);
+@import url(../blocks/intro/__about-us-card-polpska/intro__about-us-card-polpska.css);
+@import url(../blocks/intro/__about-us-card-text/intro__about-us-card-text.css);
+@import url(../blocks/intro/__about-u-strel-right/intro__about-u-strel-right.css);
+@import url(../blocks/intro/__about-us-strel-left/intro__about-us-strel-left.css);
+@import url(../blocks/intro/__about-us-toshki/intro__about-us-toshki.css);
+
+
 @import url(../blocks/title/title.css);
 @import url(../blocks/subtitle/subtitle.css);
 @import url(../blocks/list/list.css);
