--- a/blocks/team/__arrow/_back/team__arrow_back.css
+++ b/blocks/team/__arrow/_back/team__arrow_back.css
@@ -7,14 +7,15 @@
 }
 
 
-@media (min-width: 1440px) {
+@media (min-width: 1400px) {
   .team__arrow_back {
     width: 60px;
     height: 60px;
     background-image: url('../../../../images/arrow-left.svg');
     background-position: center;
     background-repeat: no-repeat;
-    left: 89px;
+    left: 5.18%;
+    display: flex
   }
 
   .team__arrow_back::after {
