--- a/pages/index.css
+++ b/pages/index.css
@@ -52,6 +52,7 @@
 @import url(../blocks/educate/__title/educate__title.css);
 @import url(../blocks/educate/__subtitle/educate__subtitle.css);
 @import url(../blocks/educate/__programs/educate__programs.css);
+@import url(../blocks/educate/__programs/_active/educate__programs_active.css);
 @import url(../blocks/educate/__button/educate__button.css);
 @import url(../blocks/educate/__button/_active/educate__button_active.css);
 @import url(../blocks/educate/__buttons/educate__buttons.css);
