--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,7 @@
 @import url(../vendor/font/font.css);
 
 @import url(../blocks/body/body.css);
+@import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__menu/header__menu.css);
@@ -144,3 +145,15 @@
 @import url(../blocks/footer/__social-item/footer__social-item.css);
 @import url(../blocks/footer/__social-icon/footer__social-icon.css);
 @import url(../blocks/footer/__author/footer__author.css);
+
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__box/popup__box.css);
+@import url(../blocks/popup/__header/popup__header.css);
+@import url(../blocks/popup/__text-box/popup__text-box.css);
+@import url(../blocks/popup/__text/popup__text.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__ul/popup__ul.css);
+@import url(../blocks/popup/__text-li/popup__text-li.css);
