--- a/blocks/publication/__title/publication__title.css
+++ b/blocks/publication/__title/publication__title.css
@@ -6,6 +6,7 @@
     margin-top: 12px;
 
     overflow: hidden;
+    min-height: 38px;
 
     display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -16,7 +17,7 @@
     .publication__title{
         font-size: 18px;
         line-height: 30px;
-
+        min-height: 60px;
         margin-top: 16px;
     }
 }
