--- a/blocks/team/__header/team__header.css
+++ b/blocks/team/__header/team__header.css
@@ -3,7 +3,9 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 1.375;
-  margin-top: 20px;
+  margin: 0;
+  padding-top: 20px;
+  text-align: center;
 }
 
 @media (min-width: 768px) {
