--- a/pages/index.css
+++ b/pages/index.css
@@ -71,6 +71,7 @@
 @import url(../blocks/publications/__body/publications__body.css);
 @import url(../blocks/publications/__title/publications__title.css);
 @import url(../blocks/publications/__points/publications__points.css);
+@import url(../blocks/publications/__slider/publications__slider.css);
 @import url(../blocks/publications/__slider-button/publications__slider-button.css);
 @import url(../blocks/publications/__slider-button/_type/publications__slider-button_type_next.css);
 @import url(../blocks/publications/__slider-button/_type/publications__slider-button_type_prev.css);
