--- a/blocks/footer/__info/footer__info.css
+++ b/blocks/footer/__info/footer__info.css
@@ -4,11 +4,18 @@
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
-  line-height: 2;
+  line-height: 1.33;
+}
+
+@media (min-width: 768px) {
+  .footer__info {
+    margin-bottom: 12px;
+  }
 }
 
 @media (min-width: 1140px) {
   .footer__info {
+    margin-bottom: 0;
     font-size: 14px;
     line-height: 1.36;
   }
