feat: add Swiper to About us

--- a/blocks/intro/__about-us-toshki/intro__about-us-toshki.css
+++ b/blocks/intro/__about-us-toshki/intro__about-us-toshki.css
@@ -1,19 +1,20 @@
 .intro__about-us-toshki{
-    display: block;
     margin: 0 auto;
     padding-bottom: 54px;
+
+    display: flex;
+    justify-content: center;
+    margin-top: 13px;
 }
 @media screen and (min-width: 768px) {
     .intro__about-us-toshki{
-        width: 68px;
-        height: 50px;
+        margin-top: 21px;
         padding-bottom: 60px;
     }
 }
 @media screen and (min-width: 1440px) {
     .intro__about-us-toshki{
-        width: 68px;
-        height: 50px;
+        margin-top: 26.5px;
         padding-bottom: 80px;
     }
 }
