--- a/blocks/intro/__about-us-cards/intro__about-us-cards.css
+++ b/blocks/intro/__about-us-cards/intro__about-us-cards.css
@@ -1,21 +1,23 @@
-.intro__about-us-cards{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    padding-bottom: 13px;
-    display: flex;
-    align-items: center;
-    padding-right: 16px;
-    padding-left: 16px;
+.intro__about-us-cards {
+  padding: 0;
+  box-sizing: border-box;
+  padding-top: 10px;
 }
+
 @media screen and (min-width: 768px) {
-    .intro__about-us-cards{
-        padding-bottom: 0;
-    }
+  .intro__about-us-cards {
+    padding-bottom: 0;
+  }
 }
+
+@media (min-width : 900px) {
+  .intro__about-us-cards {
+    max-width: 81%;
+  }
+}
+
 @media screen and (min-width: 1440px) {
-    .intro__about-us-cards{
-        padding-right: 95px;
-        padding-left: 83px;
-    }
+  .intro__about-us-cards {
+    padding-right: 95px;
+  }
 }
