--- a/blocks/intro/__button/intro__button.css
+++ b/blocks/intro/__button/intro__button.css
@@ -2,37 +2,29 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    margin-right: 16px;
-    margin-left: calc(16px + 23 * (100vw - 320px) / 448);
     border: none;
-    font: inherit;
-    color: inherit;
     background-color: transparent;
     cursor: pointer;
-    min-width: calc(288px + 42 * (100vw - 320px) / 448);
-    height: calc(44px + 16 * (100vw - 320px) / 448);
-    font-weight: 600;
-    font-size: calc(14px + 4 * (100vw - 320px) / 448);
-    line-height: calc(19px + 11 * (100vw - 320px) / 448);
     color: #FFFFFF;
     border: 1px solid #FFFFFF;
-    border-radius: calc(5px + 5 * (100vw - 320px) / 448);
-    margin-bottom: 60px;
-}
-@media screen and (min-width: 768px) {
-    .intro__button{
-        margin-bottom: 0px;
-    }
+    width: 350px;
+    height: 60px;
+    font-weight: 600;
+    border-radius: 10px;
+    font-size: 18px;
+    line-height: 30px;
+    flex-shrink: unset;
 }
 
-@media screen and (min-width: 1440px) {
-    .intro__button{
-        margin-left: 830px;
-        min-width: 350px;
-        height: 60px;
-        border-radius: 10px;
-        font-size: 18px;
-        line-height: 30px;
-        margin-bottom: 0;
+@media screen and (max-width: 768px) {
+    .intro__button {
+        max-width: calc(100% - 40px);
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        height: 40px;
     }
+}
+@media screen and (max-width: 1240px) {
+
 }
