--- a/pages/index.css
+++ b/pages/index.css
@@ -158,15 +158,33 @@
 
 
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__lab/popup__lab.css);
 @import url(../blocks/popup/__box/popup__box.css);
 @import url(../blocks/popup/__header/popup__header.css);
 @import url(../blocks/popup/__text-box/popup__text-box.css);
 @import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__body/popup__body.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__ul/popup__ul.css);
 @import url(../blocks/popup/__text-li/popup__text-li.css);
+
+@import url(../blocks/navigation/navigation.css);
+@import url(../blocks/navigation/__header/navigation__header.css);
+@import url(../blocks/navigation/__item/navigation__item.css);
+@import url(../blocks/navigation/__item-expander/navigation__item-expander.css);
+@import url(../blocks/navigation/__item-expander/_disable/navigation__item-expander_disable.css);
+@import url(../blocks/navigation/__item/_disable/navigation__item_disable.css);
+@import url(../blocks/navigation/__list/navigation__list.css);
+@import url(../blocks/navigation/__logo/navigation__logo.css);
+@import url(../blocks/navigation/__link/navigation__link.css);
+@import url(../blocks/navigation/__link/_disable/navigation__link_disable.css);
+@import url(../blocks/navigation/__button/navigation__button.css);
+
+@import url(../blocks/mini-list/__item/mini-list__item.css);
+@import url(../blocks/mini-list/mini-list.css);
+@import url(../blocks/mini-list/_active/mini-list_active.css);
 
 @import url(../blocks/form/__group/_type/form__group_type_user-message.css);
 @import url(../blocks/form/__input-error/form__input-error.css);
