--- a/blocks/header/__burger-icon/header__burger-icon.css
+++ b/blocks/header/__burger-icon/header__burger-icon.css
@@ -2,8 +2,13 @@
     width: 24px;
     height: 24px;
     display: none;
-}
 
+    transition: opacity 0.2s linear;
+}
+.header__burger-icon:hover{
+    cursor: pointer;
+    opacity: 0.6;
+}
 @media screen and (max-width: 1240px) {
     .header__burger-icon {
         display: block;
