--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,8 +2,6 @@
     width: 100%;
     height: 100vh;
     margin: 0 auto;
-    display: grid;
-    flex-direction: column;
     position: fixed;
     top: 0;
     left: 0;
@@ -16,9 +14,8 @@
 
 .popup::before {
     content: '';
-    background-color: #000D26;
+    background-color: rgba(0, 19, 55, 0.6);
     background-size: cover;
-    opacity: .6;
     width: 100vw;
     height: 100vh;
     position: absolute;
