--- a/blocks/industrial/__card-text/industrial__card-text.css
+++ b/blocks/industrial/__card-text/industrial__card-text.css
@@ -1,18 +1,22 @@
-.industrial__card-text{
+.industrial__card-text {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-weight: 400;
-    font-size: 10px;
-    line-height: 14px;
+    font-size: 14px;
+    line-height: 20px;
     text-align: center;
-    letter-spacing: 0.1px;
     color: #001337;
 }
-@media screen and (min-width: 1440px) {
-    .industrial__card-text{
-        font-size: 14px;
-        line-height: 20px;
-        letter-spacing: 0.1px;
+
+.industrial__card:hover .industrial__card-text {
+    color: white;
+}
+
+@media screen and (max-width: 1240px) {
+    .industrial__card-text {
+        font-weight: 400;
+        font-size: 10px;
+        line-height: 14px;
     }
 }
