--- a/blocks/industrial/__card/industrial__card.css
+++ b/blocks/industrial/__card/industrial__card.css
@@ -1,26 +1,29 @@
-.industrial__card{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.industrial__card {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     background: #FFFFFF;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
     height: auto;
-    min-height: 224px;
-    padding: 10px;
+    
+    padding: 20px;
+    box-sizing: border-box;
+    
+    box-shadow: 0px 4px 20px rgba(1, 54, 157, 0.15);
+}
+
+.industrial__card:hover {
+    transform: translateY(-10px);
+    transition: transform 280ms ease-out 50ms; 
 }
 
 .industrial__card:hover{
     background: #009FAC;
 }
 
-
 @media screen and (min-width: 320px) {
     .industrial__card {
-        /* width: calc(100vw / 2 - 52px);  */
         width: 48%;
         height: 224px;
     }
@@ -28,32 +31,38 @@
 
 @media screen and (min-width: 768px) {
     .industrial__card {
-        background-image: url(../../../images/industrial/foncarddeck.png);
+        background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), url(../../../images/industrial/foncarddeck.png);
+
+        max-width: 150px;
+        height: 224px;
     }
     .industrial__card-2 {
-        background-image: url(../../../images/industrial/indCard2.png);
+        background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), url(../../../images/industrial/indCard2.png);
     }
-
     .industrial__card-3 {
-        background-image: url(../../../images/industrial/indCard3.png);
+        background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), url(../../../images/industrial/indCard3.png);
     }
-
     .industrial__card-4 {
-        background-image: url(../../../images/industrial/indCard4.png);
+        background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), url(../../../images/industrial/indCard4.png);
+    }
+}
+
+@media screen and (max-width: 1240px) {
+    .industrial__card {
+        padding: 10px;
     }
 }
 
 @media screen and (min-width: 1240px) {
-    .industrial__card{
+    .industrial__card {
+        min-height: 224px;
+        min-width: 240px;
         width: 240px;
         height: 430px;
-        display: flex;
-    }
-
-    .industrial__card:hover {
-        transform: translateY(-10px);
     }
 }
+
+
 
 
 
