--- a/blocks/industrial/__img/industrial__img.css
+++ b/blocks/industrial/__img/industrial__img.css
@@ -14,6 +14,13 @@
     margin-right: 12px;
 }
 
+@media screen and (max-width: 768px) {
+    .industrial__img {
+        min-height: 240px;
+        max-width: 330px;
+    }
+}
+
 @media screen and (max-width: 1240px) {
     .industrial__img {
         width: calc(100% - 40px);
