--- a/blocks/industrial/__text/industrial__text.css
+++ b/blocks/industrial/__text/industrial__text.css
@@ -6,6 +6,8 @@
     font-size: calc(12px + 2 * (100vw - 320px) / 448);
     line-height: calc(16px + 4 * (100vw - 320px) / 448);
     margin-bottom: 20px;
+    margin-block-start: 0;
+    margin-block-end: 0;
 }
 
 @media screen and (min-width: 768px) {
