--- a/blocks/industrial/__card/industrial__card.css
+++ b/blocks/industrial/__card/industrial__card.css
@@ -53,6 +53,10 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    
+}
+
 @media screen and (min-width: 1240px) {
     .industrial__card {
         min-height: 224px;
