--- a/blocks/navigation/__item/navigation__item.css
+++ b/blocks/navigation/__item/navigation__item.css
@@ -1,6 +1,6 @@
 .navigation__item{
-    margin-bottom: 25px;
-    padding: 0 15px;
+    margin-bottom: 5px;
+    padding: 10px 15px;
 
     color: #FFFFFF;
     transition: opacity 0.2s linear;
@@ -11,10 +11,11 @@
 .navigation__item:hover{
     opacity: 0.6;
     cursor: pointer;
+    background-color: #001337;
 }
 
 @media screen and (min-width: 600px) {
     .navigation__item{
-        padding: 0 40px;
+        padding: 10px 40px;
     }
 }
