feat: add Swiper on mobile

--- a/blocks/projects/__interface/projects__interface.css
+++ b/blocks/projects/__interface/projects__interface.css
@@ -1,3 +1,8 @@
 .projects__interface {
     text-align: center;
+    display: flex;
+    column-gap: 30.3px;
+    row-gap: 5px;
+    justify-content: center;
+    flex-wrap: wrap;
 }
