--- a/blocks/projects/__nav-list-item/projects__nav-list-item.css
+++ b/blocks/projects/__nav-list-item/projects__nav-list-item.css
@@ -1,4 +1,12 @@
 .projects__nav-list-item {
     text-align: center;
-    width: calc(100% / 4);
+    font-weight: 600;
+font-size: 12px;
+line-height: 16px;
+}
+
+@media screen and (min-width: 768px){
+    .projects__nav-list-item {
+
+    }
 }
