--- a/blocks/projects/__thumb-link/projects__thumb-link.css
+++ b/blocks/projects/__thumb-link/projects__thumb-link.css
@@ -1,3 +1,13 @@
 .projects__thumb-link {
     color: #fff;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 14px;
+    letter-spacing: 0.1px;
+
+    transition: opacity 0.2s linear;
+}
+.projects__thumb-link:hover{
+    opacity: 0.5;
 }
