--- a/blocks/projects/__thumb-logo/projects__thumb-logo.css
+++ b/blocks/projects/__thumb-logo/projects__thumb-logo.css
@@ -1,3 +1,10 @@
 .projects__thumb-logo {
-    max-width: 112px;
+    width: 60px;
+    height: 26px;
+}
+
+@media screen and (min-width: 768px){
+    .projects__thumb-logo {
+
+    }
 }
