--- a/blocks/projects/__thumb-text/projects__thumb-text.css
+++ b/blocks/projects/__thumb-text/projects__thumb-text.css
@@ -1,9 +1,17 @@
 .projects__thumb-text {
-    padding-top: 20px;
+    padding-top: 8px;
     padding-bottom: 20px;
     margin-block-start: 0;
     margin-block-end: 0;
+
+    font-size: 10px;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
+    line-height: 14px;
+    letter-spacing: 0.1px;
+}
+
+@media screen and (min-width: 768px){
+    .projects__thumb-text {
+
+    }
 }
