--- a/blocks/projects/__thumb/projects__thumb.css
+++ b/blocks/projects/__thumb/projects__thumb.css
@@ -1,7 +1,6 @@
 .projects__thumb {
-    height: 310px;
-    width: calc(100% - 90px);
     border-radius: 10px;
     background: #009FAC;
-    padding: 20px;
+    padding: 10px;
+    box-sizing: border-box;
 }
