--- a/blocks/publications/__points/publications__points.css
+++ b/blocks/publications/__points/publications__points.css
@@ -1,5 +1,10 @@
-.publications__points{
+.publications__points{    
     margin-top: 14px;
+    display: flex;
+    column-gap: 8px;
+    row-gap: 5px;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 @media screen and (min-width: 620px){
