--- a/blocks/projects/__navigation/projects__navigation.css
+++ b/blocks/projects/__navigation/projects__navigation.css
@@ -3,3 +3,10 @@
     width: 100%;
     justify-content: space-between;
 }
+@media screen and (min-width: 570px){
+    .projects__navigation{
+       justify-content: center;
+       width: auto;
+       column-gap: 33px;
+    }
+}
