--- a/blocks/projects/__nav/projects__nav.css
+++ b/blocks/projects/__nav/projects__nav.css
@@ -10,5 +10,7 @@
 @media screen and (min-width: 768px){
     .projects__nav {
         display: flex;
+        width: 100%;
+        padding-bottom: 26px;
     }
 }
