--- a/blocks/projects/__title/projects__title.css
+++ b/blocks/projects/__title/projects__title.css
@@ -10,6 +10,9 @@
 
 @media screen and (min-width: 768px){
     .projects__title {
-
+        font-size: 24px;
+        line-height: 33px;
+        letter-spacing: 0.1px;
+        padding-bottom: 42px;
     }
 }
