--- a/blocks/projects/__nav-list-item/projects__nav-list-item.css
+++ b/blocks/projects/__nav-list-item/projects__nav-list-item.css
@@ -2,8 +2,14 @@
     font-weight: 600;
     font-size: 14px;
     line-height: 19px;
+    padding: 0 16px;
+    padding-bottom: 8px;
+    cursor: pointer;
+    transition: opacity 0.2s linear;
 }
-
+.projects__nav-list-item:hover{
+    opacity: 0.5;
+}
 @media screen and (min-width: 768px){
     .projects__nav-list-item {
 
