--- a/blocks/projects/projects.css
+++ b/blocks/projects/projects.css
@@ -4,3 +4,9 @@
     padding-bottom: 60px;
     color: white;
 }
+@media screen and (min-width: 768px){
+    .projects {
+        padding-top: 60px;
+        padding-bottom: 66px;
+    }
+}
