--- a/blocks/projects/__nav/projects__nav.css
+++ b/blocks/projects/__nav/projects__nav.css
@@ -14,3 +14,9 @@
         padding-bottom: 26px;
     }
 }
+
+@media screen and (min-width: 1100px){
+    .projects__nav {
+        padding-bottom: 60px;
+    }
+}
