--- a/blocks/projects/__navigation/projects__navigation.css
+++ b/blocks/projects/__navigation/projects__navigation.css
@@ -10,3 +10,8 @@
        column-gap: 33px;
     }
 } 
+@media screen and (min-width: 1100px){
+    .projects__navigation{
+       column-gap: 48px;
+    }
+} 
