--- a/blocks/projects/__thumb-link/projects__thumb-link.css
+++ b/blocks/projects/__thumb-link/projects__thumb-link.css
@@ -17,3 +17,9 @@
         line-height: 16px;
     }
 }
+@media screen and (min-width: 1100px){
+    .projects__thumb-link {
+        font-size: 14px;
+        line-height: 19px;
+    }
+}
