--- a/blocks/projects/__thumb-wrapper/projects__thumb-wrapper.css
+++ b/blocks/projects/__thumb-wrapper/projects__thumb-wrapper.css
@@ -6,3 +6,8 @@
         padding-bottom: 32px;
     }
 }
+@media screen and (min-width: 1100px){
+    .projects__thumb-wrapper {
+        padding-bottom: 44px;
+    }
+}
