--- a/blocks/projects/__thumb/projects__thumb.css
+++ b/blocks/projects/__thumb/projects__thumb.css
@@ -9,3 +9,8 @@
         padding-bottom: 15px;
     }
 }
+@media screen and (min-width: 1100px){
+    .projects__thumb{
+        padding: 20px;
+    }
+}
