--- a/blocks/projects/__title/projects__title.css
+++ b/blocks/projects/__title/projects__title.css
@@ -16,3 +16,10 @@
         padding-bottom: 42px;
     }
 }
+
+@media screen and (min-width: 1100px){
+    .projects__title {
+        font-size: 36px;
+        line-height: 68px;
+    }
+}
