--- a/blocks/projects/projects.css
+++ b/blocks/projects/projects.css
@@ -10,3 +10,9 @@
         padding-bottom: 66px;
     }
 }
+@media screen and (min-width: 1100px){
+    .projects {
+        padding-top: 80px;
+        padding-bottom: 61px;
+    }
+}
