--- a/blocks/publication/__button/publicaction__button.css
+++ b/blocks/publication/__button/publicaction__button.css
@@ -1,4 +1,7 @@
 .publicaction__button{
+    padding: 0;
+    border: none;
+    cursor: pointer;
     color: none;
     background-color: inherit;
 }
