--- a/blocks/publications/__slider-button/publications__slider-button.css
+++ b/blocks/publications/__slider-button/publications__slider-button.css
@@ -1,5 +1,9 @@
 .publications__slider-button{
     z-index: -1;
+    
+    padding: 0;
+    border: none;
+    cursor: pointer;
 
     width: 50px;
     height: 50px;
