--- a/blocks/educate/__subtitle/educate__subtitle.css
+++ b/blocks/educate/__subtitle/educate__subtitle.css
@@ -1,11 +1,27 @@
+.educate__subtitle{
+    margin: 0;
 
+    font-size: 12px;
+    line-height: 16px;
+}
+@media screen and (min-width: 620px){
+    .educate__subtitle{
+        width: 78%;
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 0.1px;
+    }
+}
 @media screen and (min-width: 900px){
     .educate__subtitle{
         width: 78%;
+
     }
 }
 @media screen and (min-width: 1250px){
     .educate__subtitle{
         width: 920px;
+        font-size: 18px;
+        line-height: 30px;
     }
 }
