--- a/blocks/publications/__title/publications__title.css
+++ b/blocks/publications/__title/publications__title.css
@@ -2,13 +2,18 @@
     text-transform: uppercase;
     text-align: center;
 
+    margin: 0;
     margin-bottom: 18px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
 }
 
 @media screen and (min-width: 620px){
     .publications__title{
         margin-bottom: 40px;
-        
+        font-size: 24px;
+        line-height: 33px;
     }
 }
 
@@ -21,5 +26,8 @@
 @media screen and (min-width: 1250px){
     .publications__title{
         margin-bottom: 26px;
+        font-size: 36px;
+        line-height: 68px;
+        letter-spacing: 0.1px;
     }
 }
